# slurm-rs

./: Cargo.toml  LICENSE  README.md
examples/: get-diag.rs  get-jobs.rs  get-licenses.rs  get-nodes.rs  get-partitions.rs  get-reservations.rs  ping-slurm.rs
src/: lib.rs
